fix: validations and global alignments are fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,66 @@
-.result-box {
-}
-
 .numericInput {
   max-width: 5em;
+}
+
+.card {
+  width: 25%;
+}
+
+/* The snackbar - position it at the bottom and in the middle of the screen */
+.success{
+  background-color: rgb(95, 187, 118) !important; 
+  color: rgb(0, 0, 0) !important; /* White text color */
+}
+.danger{
+  background-color: rgb(131, 41, 30) !important; 
+  color: rgb(255, 255, 255) !important; /* White text color */
+}
+.warning{
+  background-color: rgb(158, 145, 25) !important; 
+  color: rgb(255, 255, 255) !important; /* White text color */
+}
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: rgb(134, 130, 130); /* Black background color */
+  color: rgb(0, 0, 0); /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  right: 5%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+.show {
+  visibility: visible !important; /* Show the snackbar */
+
+/* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 1.5s, fadeout 0.5s 5.5s;
+  animation: fadein 1.5s, fadeout 0.5s 5.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {right: 0; opacity: 0;}
+  to {right: 5%; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {right: 0; opacity: 0;}
+  to {right: 5%; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {right: 5%; opacity: 1;}
+  to {right: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {right: 5%; opacity: 1;}
+  to {right: 0; opacity: 0;}
 }
